--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="logo">
-                <i class="fas fa-lightbulb"></i>
-                <h1>IdeaSpark!</h1>
-            </div>
+            <a href="#home" class="logo" aria-label="IdeaSpark Home">
+                <img src="logo.png" alt="IdeaSpark" class="site-logo" />
+            </a>
             <nav class="nav">
                 <a href="#home" class="nav-link active">Home</a>
                 <a href="#ideas" class="nav-link">Ideas</a>
@@ -42,9 +41,7 @@
                         Submit Your Idea
                     </button>
                 </div>
-                <div class="hero-visual">
-                    <img src="Generated Image September 14, 2025 - 11_47AM.png" alt="Innovation Visualization" class="hero-image">
-                </div>
+                
                 <div class="hero-stats">
                     <div class="stat">
                         <span class="stat-number">127</span>
@@ -97,7 +94,7 @@
             <div class="container">
                 <div class="section-header">
                     <h3>Innovation Management Programs</h3>
-                    <p class="section-subtitle">Join structured programs to develop your innovation skills and knowledge</p>
+                   <!-- <p class="section-subtitle">Join structured programs to develop your innovation skills and knowledge</p>-->
                 </div>
                 
                 <!-- Current Programs -->
