--- a/index.html
+++ b/index.html
@@ -89,6 +89,114 @@
             </div>
         </section>
 
+<!-- Idea Evaluation Results -->
+<section id="evaluation" class="eval-dashboard">
+  <div class="container">
+    <div class="eval-header">
+      <div class="brand">
+        <img src="logo.png" alt="IdeaSpark" class="eval-logo" />
+      </div>
+      <div class="eval-title">
+        <h2>Idea Evaluation Results</h2>
+        <p class="meta">Submitted by John Doe</p>
+      </div>
+      <span class="status-badge status-approved">APPROVED</span>
+    </div>
+
+    <div class="eval-grid">
+      <!-- Strategic Alignment -->
+      <article class="card">
+        <h3>Strategic Alignment</h3>
+
+        <!-- Donut gauge with 'High' label (no percentage) -->
+        <div class="gauge">
+          <svg viewBox="0 0 120 120" class="donut" aria-hidden="true">
+            <circle class="donut-ring" cx="60" cy="60" r="52"></circle>
+            <!-- adjust stroke-dasharray to visually imply "high" -->
+            <circle class="donut-segment high" cx="60" cy="60" r="52"
+              stroke-dasharray="265 327" stroke-dashoffset="0"></circle>
+          </svg>
+          <div class="gauge-center">
+            <div class="gauge-label">High</div>
+          </div>
+        </div>
+
+        <p class="desc">
+          The idea demonstrates a strong alignment with the company’s strategic priorities,
+          supporting both near-term goals and long-term objectives. It fits seamlessly into
+          the broader vision and reinforces our commitment to innovation and sustainable growth.
+        </p>
+      </article>
+
+      <!-- Estimated Impact -->
+      <article class="card">
+        <h3>Estimated Impact</h3>
+
+        <div class="bar-wrap">
+          <div class="bar-label">
+            <span>$2–5M</span><small>Conservative</small>
+          </div>
+          <div class="bar"><span style="width: 65%"></span></div>
+        </div>
+
+        <div class="bar-wrap">
+          <div class="bar-label">
+            <span>$5–10M</span><small>Optimistic</small>
+          </div>
+          <div class="bar"><span style="width: 90%"></span></div>
+        </div>
+
+        <p class="desc">
+          The financial potential is significant, with a conservative annual return estimated
+          at $2–5M and an optimistic projection of up to $10M. This positions the idea as a
+          high-value initiative capable of delivering measurable business benefits.
+        </p>
+      </article>
+
+      <!-- Implementation Risks -->
+      <article class="card">
+        <h3>Implementation Risks</h3>
+        <ul class="bullets">
+          <li>Scalability constraints in initial rollout</li>
+          <li>Resource allocation across dependent teams</li>
+          <li>Technical complexity requiring phased delivery</li>
+        </ul>
+        <p class="desc">
+          While promising, the idea carries medium execution risk. A phased pilot, clear
+          resourcing plan, and cross-functional governance will mitigate the impact of these risks.
+        </p>
+      </article>
+
+      <!-- Potential Sponsors -->
+      <article class="card">
+        <h3>Potential Sponsors</h3>
+        <ul class="bullets">
+          <li>Product Development</li>
+          <li>Executive Leadership</li>
+        </ul>
+        <p class="desc">
+          Given the scope and enterprise impact, Product Development is recommended as the
+          operational sponsor, with Executive Leadership providing strategic guidance and
+          resource prioritization.
+        </p>
+      </article>
+
+      <!-- Next Steps -->
+      <article class="card">
+        <h3>Next Steps</h3>
+        <ul class="bullets">
+          <li>Prototype in Q2 with a limited user group</li>
+          <li>Define success metrics (adoption, ROI, NPS)</li>
+          <li>Prepare implementation plan & budget for Q3</li>
+        </ul>
+        <p class="desc">
+          A controlled prototype will validate assumptions, test scalability, and collect
+          stakeholder feedback ahead of a wider rollout.
+        </p>
+      </article>
+    </div>
+  </div>
+</section>
         <!-- Programs Section -->
         <section id="programs" class="programs-section">
             <div class="container">
